homework-1:) tsk-1, tsk-2 refactoring, fix remove()

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -6,7 +6,8 @@
   <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
-  <script type="text/javascript" src="task_1_2.js"></script>
+  <div id="main-contant"></div>
+  <script type="text/javascript" src="task_1.js"></script>
   <script type="text/javascript" src="task_3.js"></script>
 </body>
 </html>
