hw-1-tsk-1 refactoring

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -6,8 +6,9 @@
   <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
-  <div id="main-contant"></div>
+  <div id="main-content"></div>
   <script type="text/javascript" src="task_1.js"></script>
+  <script type="text/javascript" src="task_2.js"></script>
   <script type="text/javascript" src="task_3.js"></script>
 </body>
 </html>
