hw-1 task-2 refactoring

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -6,9 +6,11 @@
   <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
-  <div id="main-content"></div>
+  <div id="main-content-1"></div>
+  <div id="main-content-2"></div>
+  <div id="main-content-3"></div>
   <script type="text/javascript" src="task_1.js"></script>
   <script type="text/javascript" src="task_2.js"></script>
-  <script type="text/javascript" src="task_3.js"></script>
+  <!-- <script type="text/javascript" src="task_3.js"></script> -->
 </body>
 </html>
