hw-1:) Hamburger refactoring/ add prise and calories calculation

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>JS-level-2 homework-1 all tasks</title>
-  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
   <div id="main-content-1"></div>
   <div id="main-content-2"></div>
-  <div id="main-content-3"></div>
   <script type="text/javascript" src="task_1.js"></script>
   <script type="text/javascript" src="task_2.js"></script>
-  <!-- <script type="text/javascript" src="task_3.js"></script> -->
+  <script type="text/javascript" src="task_3.js"></script>
 </body>
 </html>
